# transporti

./: .gitignore  CMakeLists.txt  DEBIAN_11_INSTALL.md  README.md  run.sh
.claude/: settings.local.json
.github/workflows/: build.yml
qml/: main.qml
qml/components/: AquaButton.qml  GradientBackground.qml  SidebarItem.qml
qml/layout/: MainLayout.qml  Sidebar.qml
qml/styles/: AquaTheme.qml  qmldir
qml/views/: CategorySelectionView.qml  CompletionView.qml  DataCube.qml  DiscoveryView.qml  PairingView.qml  RoleSelectionView.qml  ScanningView.qml  TransferView.qml  WelcomeView.qml
resources/: qml.qrc
scripts/: build-linux.sh  build-windows.sh
src/: CMakeLists.txt  main.cpp
src/compression/: CompressionEngine.cpp  CompressionEngine.h  ZstdCompressor.cpp  ZstdCompressor.h
src/core/: Application.cpp  Application.h  ApplicationState.cpp  ApplicationState.h
src/models/: DataCategoryModel.cpp  DataCategoryModel.h  PeerListModel.cpp  PeerListModel.h  TransferProgressModel.cpp  TransferProgressModel.h
src/network/: NetworkManager.cpp  NetworkManager.h
src/network/Discovery/: DiscoveryService.cpp  DiscoveryService.h  PeerInfo.cpp  PeerInfo.h
src/network/Security/: PairingManager.cpp  PairingManager.h
src/network/Transfer/: PacketManager.cpp  PacketManager.h  TransferClient.cpp  TransferClient.h  TransferProtocol.cpp  TransferProtocol.h  TransferServer.cpp  TransferServer.h
src/platform/: LinuxUtils.cpp  LinuxUtils.h  PlatformUtils.cpp  PlatformUtils.h  WindowsUtils.cpp  WindowsUtils.h
src/scanner/: ScannerBase.cpp  ScannerBase.h
src/scanner/LinuxScanner/: ApplicationScanner.cpp  ApplicationScanner.h  BrowserScanner.cpp  BrowserScanner.h  ConfigScanner.cpp  ConfigScanner.h  DocumentScanner.cpp  DocumentScanner.h  EmailScanner.cpp  EmailScanner.h  LinuxDataScanner.cpp  LinuxDataScanner.h
